# gc_scripts

./: main.py  pyproject.toml
blast_hole/: blast_hole.ipynb
database/: gc_db.ipynb
others/: dig_comp_manual.tcl  digplan_grade_comp.tcl
sampling/: update_assay.ipynb
