[project]
name = "gc-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "geopandas>=1.1.1",
    "ipykernel>=7.1.0",
    "nbconvert>=7.16.6",
    "nbstripout>=0.8.2",
    "pandas>=2.3.3",
    "ruff>=0.14.9",
    "scipy>=1.16.3",
]
